# machine-monitor

./: README.md
Machine Monitor/: README.md
Machine Monitor/src/: index.html  main.js  style.css
Machine Monitor/src-tauri/: Cargo.toml  tauri.conf.json
Machine Monitor/src-tauri/src/: main.rs
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.xcf
src-tauri/src/: main.rs
