[package]
name = "machine-monitor"
version = "0.7.5"
description = "A Tauri App"
authors = ["Albin Dalbert"]
license = "MIT"
repository = "https://github.com/AlbinDalbert/machine_monitor"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
qmstats = {git = "https://github.com/AlbinDalbert/qmstats.git"}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

# [profile.release]
# opt-level = 's'     # Optimize for size.
