[package]
name = "machine-monitor"
version = "0.9.0"
description = "Monitor you machine, temperature, memory, cpu, and more"
authors = ["Albin Dalbert"]
license = "GNU General Public License v2.0"
repository = "https://github.com/AlbinDalbert/machine_monitor"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all", "system-tray"] }
qmstats = {git = "https://github.com/AlbinDalbert/qmstats.git"}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = 's'     # Optimize for size.
